Creating a JavaFX + LWJGL Framework Window